# newton-rl

./: .gitignore  .gitmodules  README.md  answers.md  main.py  pyproject.toml
.agents/plans/: programmatic-robot-model-builder.md  rc-controller-input.md
.claude/: CLAUDE.md  PRD.md
.claude/plans/: fix-usd-mesh-loading.md  phase-0-hover-validation.md
.claude/references/: contacts_and_sensors.md  gymnasium_gpu_envs.md  joints.md  model_builder.md  multi_world_and_rl.md  skrl.md  solvers.md  usd.md
.claude/research/: 01-newton-core-api.md  02-drone-modeling.md  03-rl-integration.md  04-contacts-and-grasping.md  05-model-loading.md  06-project-decomposition.md  07-design-questions.md  08-design-decisions.md
.claude/summaries/: phase-0-implementation.md
assets/: osprey-correct-usd.usd
controllers/: config.py  indi.py  low_pass_filter.py  math_utils.py  motor_model.py  osprey_model.py  rc_input.py
scripts/: convert_step_to_obj.py
testing/: test.py  validate_hover.py
